@@ -1,6 +1,7 @@
 New features, changes and fixes since gnuplot version 4.6.3
 ===========================================================
 
+* NEW Ctrl-Break interrupts fitting run in wgnuplot
 * CHANGE treat empty fields in a csv files as "missing" rather than "bad"
 * FIX svg and canvas terminal mousing of inverted axis coordinates
 * FIX emf failed to initialize font correctly on some systems
